--- a/app/views/editorial/quesiti_all.html.erb
+++ b/app/views/editorial/quesiti_all.html.erb
@@ -1,4 +1,59 @@
-<%= render :partial => 'quesiti', :locals => {:quesiti_news => @quesiti_news, :quesito_issues=> @quesito_issues, :quesiti_news_pages => @quesiti_news_pages, :quesiti_news_count => @quesiti_news_count} %>
+<% if User.current && User.current.logged? %>
+    <div class="fs-layout-cell fs-content clearfix" style="width: 100%; position:relative;">
+      <article class="fs-post fs-article">
+        <div class="fs-postcontent fs-postcontent-0 clearfix">
+          <div class="fs-content-layout">
+            <div class="fs-content-layout-row">
+              <div class="fs-layout-cell layout-item-0" style="width: 99%">
+                <% if @quesiti_news && @quesiti_news.any? %>
+                    <% @quesiti_news.each do |q| %>
+                        <article class="fs-article">
+                      <div class="fs-convegni-border">
+                        <div class="fs-quesiti-data">  <span>
+                         Quesito di: <%= q.author unless !q.author %></span>
+                          <span class="fs-quesiti-data-data"><%= I18n.localize(q.created_on.to_date, :format => :giorno_mese_anno) %>&nbsp; </span>
+                        </div>
+                        <div class="fs-quesiti-wrapper">
+                          <div class="fs-quesiti-gravatar"> <%= gravatar_for(q.author) unless !q.author %>
+                          </div>
+                          <span><%= smart_truncate(q.summary,252) %> </span>
+                          <%= link_to('Visualizza',url_for(:controller => 'editorial', :action => "quesito_show", :id => q.id), :class => "fs-vuoto-inline-button", :style => "float:right; margin:-5px 10px 0 0;")%>
+                          <br/> &nbsp;
+                        </div>
+                      </div>
+                      <div class="clearfix"></div>
+                    </article>
+                    <% end %>
+                <% else %>
+                    <%= render :text => "mah... non ci sono quesiti?!?" + @quesiti_news.count.to_s %>
+                <% end %>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <br/>
+      </article>
+
+      <br/>
+      <%# if @quesiti_news_stato_num  > 1%>
+
+      <div class="clearfix"></div>
+
+
+        <br/>
+
+    <p class="pagination"><%= pagination_links_full(@quesiti_news_pages, @quesiti_news_count) %></p>
+    <br/>
+    <p style="text-align: center;">
+      <%= link_to('Indietro', quesiti_my_path, :class => "fs-blu-button") %>  </p>
+    <%# end %>
+    </div>
+<% else %>
+    <h2 style="color:red;">
+      Gentile utente per porre quesiti a fiscosport occorre essere autenticati </h2>
+<% end %>
+
+
+
 <%= render :partial => 'blocco_sidebar1' %>
-<%=  @quesiti_news_count.to_s %>
-<%=  @quesiti_issues_count.to_s %>
