--- a/app/views/news/_form.html.erb
+++ b/app/views/news/_form.html.erb
@@ -7,8 +7,8 @@
 <% if @news.is_quesito? %>
 <h3 class="<%= @news.get_state_css %>"><%= @news.quesito_status_fs_text %></h3>
 <p><%= f.text_field :title, :required => true, :size => 60 %></p>
-<p><%= f.text_area :causale, :cols => 80, :rows => 4 %></p>
-<%= wikitoolbar_for 'news_causale' %>
+<p><%= f.text_area :reply, :cols => 80, :rows => 4 %></p>
+<%= wikitoolbar_for 'news_reply' %>
 </div>
 <% end %>
 
