--- a/app/views/editorial/quesito_show.html.erb
+++ b/app/views/editorial/quesito_show.html.erb
@@ -27,20 +27,20 @@
                 <% when 2 %> <!-- RISPOSTA FAST -->
                     <%= @quesito_news.get_state_icons_fe %>
                      <%= @quesito_news.quesito_status_fs_text %>
-                     <% if @quesito_news.causale  %>
+                     <% if @quesito_news.reply  %>
                       <%= render :partial => 'quesito', :locals => {:q => @quesito_news} %>
                          <h5> Risposta : </h5>
-                       <p><%= @quesito_news.causale %>  </p>
+                       <p><%= @quesito_news.reply %>  </p>
                       <% end %>
 
                    <% when 3 %>  <!-- ACCETTATO  -->
                     <%= @quesito_news.get_state_icons_fe %>
                      <%= @quesito_news.quesito_status_fs_text %>
                     <%= render :partial => 'quesito', :locals => {:q => @quesito_news} %>
-                     <% if @quesito_news.causale  %>
+                     <% if @quesito_news.reply  %>
 
                          <h5> Messaggio dalla redazione : </h5>
-                       <p><%= @quesito_news.causale %>  </p>
+                       <p><%= @quesito_news.reply %>  </p>
                       <% end %>
                     <br />
                       <%= render :partial => 'quesito_reply', :locals => {:issues => @quesito_issues} %>
