--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -44,7 +44,7 @@
   <div id="question" style="margin-bottom:16px;">
   <h3 class="<%= @news.get_state_css %>"><%= @news.quesito_status_fs_text %></h3>
   <% if @news.is_online? %>
-    <%= textilizable(@news.causale) %>
+    <%= textilizable(@news.reply) %>
   <% end %>
   </div>
 
