--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -57,18 +57,22 @@
             <%# link_to image_tag('/images/ico/facebook64.png'), 'http://www.facebook.com/sharer.php?u='+request.fullpath, :target => :blank %>
           </div>
           <div class="fs-riassunto-full"> <p>
-            <%= h(smart_truncate(articolo.summary, 200)) %></p></div>
-          <br/>
+            <%= h(smart_truncate(articolo.summary, 250)) %></p></div>
+
         </div>
-        <div class="clearfix">&nbsp; <br />&nbsp; <br /></div>
+        <div class="clearfix">&nbsp; <br /></div>
         <div class="fs-layout-cell layout-item-2">
           <div id="fs-articolo-full">
             <%= @articolo.description %>
+            <br />
           </div>
         </div>
-        <%= link_to "Ritorna ...", '/editoriale/' + @articolo.section.top_section.top_menu.key + '/'+ @articolo.section.top_section.key, :class => "fs-back" %>
-        <h3><%=  @articolo.news_id.to_s %></h3>
-        <% if !@articolo.news_id.nil?  %>
+        <div style="padding: 14px; text-align:center; border-top: solid 1px #bfbfbf;">
+
+        <%=link_to "Ritorna...", :back, :class => "fs-vuoto-inline-button" ,:style=> "float:none;" %>
+        </div>
+          <% if  !@quesito.nil? %>
+            <h4>L'articolo è stato ispirato da...</h4>
          <%= render :partial => 'quesito' , :locals => {:q => @quesito}  %>
         <% end %>
 
