--- a/app/views/editorial/quesito_show.html.erb
+++ b/app/views/editorial/quesito_show.html.erb
@@ -25,8 +25,9 @@
                         </div>
                     <% end %>
                 <% when 2 %> <!-- RISPOSTA FAST -->
+                  <span style="padding: 0 0 5px 5px;">
                     <%= @quesito_news.get_state_icons_fe %>
-                     <%= @quesito_news.quesito_status_fs_text %>
+                      <%= @quesito_news.quesito_status_fs_text %></span>
                      <% if @quesito_news.reply  %>
                       <%= render :partial => 'quesito', :locals => {:q => @quesito_news} %>
                          <h5> Risposta : </h5>
@@ -34,41 +35,27 @@
                       <% end %>
 
                    <% when 3 %>  <!-- ACCETTATO  -->
+                    <span style="padding: 0 0 5px 5px;">
                     <%= @quesito_news.get_state_icons_fe %>
-                     <%= @quesito_news.quesito_status_fs_text %>
+                     <%= @quesito_news.quesito_status_fs_text %> </span>
                     <%= render :partial => 'quesito', :locals => {:q => @quesito_news} %>
                      <% if @quesito_news.reply  %>
-
                          <h5> Messaggio dalla redazione : </h5>
                        <p><%= @quesito_news.reply %>  </p>
                       <% end %>
                     <br />
-                      <%= render :partial => 'quesito_reply', :locals => {:issues => @quesito_issues} %>
-
-
-
-                    <h4 > debug @quesito_issues? = <%= @quesito_issues.to_s  %> id: <%= @quesito_issues.id.to_s  %></h4>
-                    <h4 > debug @quesito_issues.any? = <%= @quesito_issues.any?.to_s  %> </h4>
-                    <h4 > debug quanti articoli pubblicati? = <%= @quesito_issues_count.to_s  %> </h4>
-                    <h4 > debug quanti articoli pubblicati e non? = <%= @quesito_issues_all_count.to_s  %> </h4>
-
-                 
+                      <%= render :partial => 'quesito_reply', :locals => {:quesito_issues =>  @quesito_issues} %>
 
                 <% when 9 %> <!-- STATO NON DETERMINATO -->
                     <h2><%= @quesito_news_stato_num.to_s %></h2>
                 <% else %>
                     case else???
-
-
                 <% end %>
-
-
                 <%= render :partial => 'flash' %>
               </div>
             </div>
           </div>
         </div>
-        <br/>
       </article>
 
       <br/>
