--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1074,4 +1074,32 @@ h2 img { vertical-align:middle; }
 .icon-renew { background-image: url(../images/role/min_renew.jpg); padding-left: 30px; min-height:21px;}
 .icon-exp { background-image: url(../images/role/min_exp.jpg); padding-left: 26px;font-style: italic; min-height:21px;}
 .icon-arc { background-image: url(../images/role/min_arc.jpg); padding-left: 16px; font-style: italic; min-height:21px;}
-.description{color: ##2C4056; background-color:#FFFFFF; padding: 5px; /*font-weight: bold;* }
+.description{color: ##2C4056; background-color:#FFFFFF; padding: 5px;} /*font-weight: bold; */
+.risposta{margin: 20px ;border: solid 1px blue; padding: 10px;}
+.fs-quesiti-status-icon {
+    background-image: url('/images/commons/quesito-status.jpg');
+    width: 100px;
+    height: 75px;
+    float: right;
+    margin: -6px 0 0 15px;
+}
+
+.fs-quesiti-status-1 {
+    background-position: 0 0;
+}
+
+.fs-quesiti-status-2 {
+    background-position: 0 -75px;
+}
+
+.fs-quesiti-status-3 {
+    background-position: 0 -150px;
+}
+
+.fs-quesiti-status-4 {
+    background-position: 0 -225px;
+}
+
+.fs-quesiti-status-5 {
+    background-position: 0 -300px;
+}
