--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -32,59 +32,84 @@
 </div>
 <% end %>
 
-<p><% unless @news.summary.blank? %><em><%=h @news.summary %></em><br /><% end %>
-<span class="author"><%= authoring @news.created_on, @news.author %></span></p>
-<div class="wiki">
-<%= textilizable(@news.description) %>
+<div class="splitcontentleft">
+<%#           CONTENUTO NEWS          %>
+  <p><% unless @news.summary.blank? %><em><%=h @news.summary %></em><br /><% end %>
+  <span class="author"><%= authoring @news.created_on, @news.author %></span></p>
+  <div class="wiki">
+  <%= textilizable(@news.description) %>
+  </div>
+  <br />
+
+<%#           COMMENTI LEGALTI ALLA NEWS          %>
+  <div id="comments" style="margin-bottom:16px;">
+  <h3 class="comments"><%= l(:label_comment_plural) %></h3>
+  <% @comments.each do |comment| %>
+      <% next if comment.new_record? %>
+      <div class="contextual">
+      <%= link_to_if_authorized image_tag('delete.png'), {:controller => 'comments', :action => 'destroy', :id => @news, :comment_id => comment},
+                                                         :confirm => l(:text_are_you_sure), :method => :delete, :title => l(:button_delete) %>
+      </div>
+      <h4><%= avatar(comment.author, :size => "24") %><%= authoring comment.created_on, comment.author %></h4>
+      <%= textilizable(comment.comments) %>
+  <% end if @comments.any? %>
+  </div>
+
+  <% if authorize_for 'comments', 'create' %>
+  <p><%= toggle_link l(:label_comment_add), "add_comment_form", :focus => "comment_comments" %></p>
+  <% form_tag({:controller => 'comments', :action => 'create', :id => @news}, :id => "add_comment_form", :style => "display:none;") do %>
+  <div class="box">
+      <%= text_area 'comment', 'comments', :cols => 80, :rows => 15, :class => 'wiki-edit' %>
+      <%= wikitoolbar_for 'comment_comments' %>
+  </div>
+  <p><%= submit_tag l(:button_add) %></p>
+  <% end %>
+  <% end %>
+
+  <% html_title @news.title -%>
+
+  <% content_for :header_tags do %>
+    <%= stylesheet_link_tag 'scm' %>
+  <% end %>
+
 </div>
-<br />
 
 <% if @news.is_quesito? %>
-
-  <div id="question" style="margin-bottom:16px;">
-  <h3 class="<%= @news.get_state_css %>"><%= @news.quesito_status_fs_text %></h3>
-  <% if @news.is_online? %>
-    <%= textilizable(@news.reply) %>
-  <% end %>
+<div class="splitcontentright">
+  <div class="box tabular">
+    <% if !@news.new_record? && User.current.allowed_to?(:add_issue_watchers, @news.project) -%>
+      <% form_for @news, :url => assign_collaboratore_path do |f| %>
+        <%= f.error_messages %>
+        <%= f.hidden_field :project_id, :value => @news.project.id %>
+        <%= f.hidden_field :news_id, :value => @news.id %>
+        <%= f.submit 'Assegna uno o più collaboratori per rispondere' %>
+        <p id="watchers_form"><label><%= l(:label_newmembers) %></label>
+        <% @news.project.users.sort.each do |user| -%>
+          <label class="floating"><%= check_box_tag 'watcher_user_ids[]', user.id, false %> <%=h user %></label>
+        <% end %>
+        <%= f.submit 'Assegna uno o più collaboratori per rispondere' %>
+    <% end -%>
+    </p>
+    <% end %>
   </div>
 
-  <div id="responses" style="margin-bottom:16px;">
-  <h3 class="responses"><%= l(:list_quesiti_response, :num => @news.issues.count) %></h3>
-  <% @news.issues.each do |issue| %>
-    <div class="risposta">
-      <b><%= link_to_issue(issue, :project => true) %></b>
-      <%= textilizable(issue.summary) %>
+  <div class="box tabular">
+    <div id="question" style="margin-bottom:16px;">
+    <h3 class="<%= @news.get_state_css %>"><%= @news.quesito_status_fs_text %></h3>
+    <% if @news.is_online? %>
+      <%= textilizable(@news.reply) %>
+    <% end %>
     </div>
-  <% end if @news.issues.any? %>
+
+    <div id="responses" style="margin-bottom:16px;">
+    <h3 class="responses"><%= l(:list_quesiti_response, :num => @news.issues.count) %></h3>
+    <% @news.issues.each do |issue| %>
+      <div class="risposta">
+        <b><%= link_to_issue(issue, :project => true) %></b>
+        <%= textilizable(issue.summary) %>
+      </div>
+    <% end if @news.issues.any? %>
+    </div>
   </div>
-<% end %>
-
-<div id="comments" style="margin-bottom:16px;">
-<h3 class="comments"><%= l(:label_comment_plural) %></h3>
-<% @comments.each do |comment| %>
-    <% next if comment.new_record? %>
-    <div class="contextual">
-    <%= link_to_if_authorized image_tag('delete.png'), {:controller => 'comments', :action => 'destroy', :id => @news, :comment_id => comment},
-                                                       :confirm => l(:text_are_you_sure), :method => :delete, :title => l(:button_delete) %>
-    </div>
-    <h4><%= avatar(comment.author, :size => "24") %><%= authoring comment.created_on, comment.author %></h4>
-    <%= textilizable(comment.comments) %>
-<% end if @comments.any? %>
 </div>
-
-<% if authorize_for 'comments', 'create' %>
-<p><%= toggle_link l(:label_comment_add), "add_comment_form", :focus => "comment_comments" %></p>
-<% form_tag({:controller => 'comments', :action => 'create', :id => @news}, :id => "add_comment_form", :style => "display:none;") do %>
-<div class="box">
-    <%= text_area 'comment', 'comments', :cols => 80, :rows => 15, :class => 'wiki-edit' %>
-    <%= wikitoolbar_for 'comment_comments' %>
-</div>
-<p><%= submit_tag l(:button_add) %></p>
-<% end %>
-<% end %>
-
-<% html_title @news.title -%>
-
-<% content_for :header_tags do %>
-  <%= stylesheet_link_tag 'scm' %>
 <% end %>
