--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -1,10 +1,12 @@
 <div class="contextual">
 <%= watcher_tag(@news, User.current) %>
+<% if !@news.is_quesito? %>
 <%= link_to(l(:button_edit),
       edit_news_path(@news),
       :class => 'icon icon-edit',
       :accesskey => accesskey(:edit),
       :onclick => 'Element.show("edit-news"); return false;') if User.current.allowed_to?(:manage_news, @project) %>
+<% end %>
 <%= link_to(l(:button_delete),
       news_path(@news),
       :confirm => l(:text_are_you_sure),
@@ -76,6 +78,15 @@
 
 <% if @news.is_quesito? %>
 <div class="splitcontentright">
+  <%= @news.get_state_icons_fe %>
+  <%= @news.quesito_status_fs_text %>
+  <% if @news.is_fast_reply? %>
+    <div id="question" style="margin-bottom:16px;" class="box">
+      <b><label><%= l(:label_reply) %><label></b>
+      <br />
+      <p style="color: red;"><%= textilizable(@news.reply) %></p>
+    </div>
+  <% else %>
   <div class="box tabular">
     <% if !@news.new_record? && User.current.allowed_to?(:add_issue_watchers, @news.project) -%>
       <% form_for @news, :url => assign_collaboratore_path do |f| %>
@@ -94,22 +105,23 @@
   </div>
 
   <div class="box tabular">
-    <div id="question" style="margin-bottom:16px;">
-      <%= @news.quesito_status_fs_text %>
-      <% if @news.is_online? %>
-        <%= textilizable(@news.reply) %>
-      <% end %>
-    </div>
-
     <div id="responses" style="margin-bottom:16px;">
       <h3 class="responses"><%= l(:list_quesiti_response, :num => @news.issues.count) %></h3>
       <% @news.issues.each do |issue| %>
         <div class="risposta">
+        <div class="contextual">
+        <% if !issue.description.nil? && issue.description != '' %>
+          <%= link_to_if_authorized(l(:button_reply), {:controller => 'issues', :action => 'news_fast_reply', :id => issue}, :class => 'icon icon-reply') %>
+          <%= link_to_if_authorized l(:button_move), {:controller => 'issue_moves', :action => 'new', :id => issue}, :class => 'icon icon-move' %>
+        <% end %>
+        <%= link_to_if_authorized l(:button_delete), {:controller => 'issues', :action => 'destroy', :id => issue}, :confirm => issues_destroy_confirmation_message(issue), :method => :post, :class => 'icon icon-del' %>
+        </div>
           <b><%= link_to_issue(issue, :project => true) %></b>
           <%= textilizable(issue.summary) %>
         </div>
       <% end if @news.issues.any? %>
     </div>
   </div>
+  <% end %>
 </div>
 <% end %>
