--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -87,14 +87,13 @@
       <p style="color: red;"><%= textilizable(@news.reply) %></p>
     </div>
   <% else %>
-  <div class="box tabular">
+  <div class="box">
     <% if !@news.new_record? && User.current.allowed_to?(:add_issue_watchers, @news.project) -%>
       <% form_for @news, :url => assign_collaboratore_path do |f| %>
         <%= f.error_messages %>
         <%= f.hidden_field :project_id, :value => @news.project.id %>
         <%= f.hidden_field :news_id, :value => @news.id %>
-        <%= f.submit 'Assegna uno o più collaboratori per rispondere' unless (!User.current.admin? ||  !User.current.ismanager?) %>
-        <p id="watchers_form"><label><%= l(:label_newmembers) %></label>
+        <p id="watchers_form"><label><b><%= l(:label_newmembers) %></label></b>
         <% @news.project.users.sort.each do |user| -%>
           <label class="floating"><%= check_box_tag 'watcher_user_ids[]', user.id, false %> <%=h user %></label>
         <% end %>
@@ -110,14 +109,19 @@
       <% @news.issues.each do |issue| %>
         <div class="risposta">
         <div class="contextual">
-        <% if !issue.description.nil? && issue.description != '' %>
+        <% if !issue.description? %>
           <%= link_to_if_authorized(l(:button_reply), {:controller => 'issues', :action => 'news_fast_reply', :id => issue}, :class => 'icon icon-reply') %>
           <%= link_to_if_authorized l(:button_move), {:controller => 'issue_moves', :action => 'new', :id => issue}, :class => 'icon icon-move' %>
         <% end %>
         <%= link_to_if_authorized l(:button_delete), {:controller => 'issues', :action => 'destroy', :id => issue}, :confirm => issues_destroy_confirmation_message(issue), :method => :post, :class => 'icon icon-del' %>
         </div>
           <b><%= link_to_issue(issue, :project => true) %></b>
-          <%= textilizable(issue.summary) %>
+          <br /><%= l(:field_assigned_to) %> ==> <%= link_to_user(issue.author) %>
+          <br /><% if issue.description? %>
+            <%= textilizable(issue.description) %>
+          <% else %>
+            <%= l(:no_reply_actualy) %>
+          <% end %>
         </div>
       <% end if @news.issues.any? %>
     </div>
