start branch chisisamo

--- a/app/views/editorial/servizi.html.erb
+++ b/app/views/editorial/servizi.html.erb
@@ -1,51 +1,68 @@
-<div style="width: 100%">
-  <div class="fs-layout-cell post-layout-item-3" style="max-width: 640px; border-right: solid 10px transparent;">
-    <div class="fs-content-layout-row">
-      <article class="fs-post fs-article clearfix">
-        <%= image_tag("/images/commons/servizi-fiscosport.jpg", :alt => "Servizi alle associaziuoni",  :class => "fs-lightbox") %>
+    <div class="fs-layout-cell fs-content clearfix" style="width: 100%; position:relative;">
+      <article class="fs-post fs-article">
+        <div class="fs-postcontent fs-postcontent-0 clearfix">
+          <div class="fs-content-layout">
+            <div class="fs-content-layout-row">
+              <div class="fs-layout-cell layout-item-0" style="width: 99%">
+                <p style="text-align: center;">
 
-        <h3 class="fs-postheader">I NOSTRI SERVIZI ALLE ASSOCIAZIONI</h3>
-
-        Fiscosport la migliore rivista  che tratta di argomenti fiscali in ambito sportivo.
-        Esiste solo in formato online ed è fruibile in toto tramite un abbonamento annule.
-        La sua Newsletter viene inviata all'abbonato con cadenza QUINDICINALE
-        e viene di norma inoltrata nella giornata del giovedì (1/11, 15/11, 29/11, 13/12), a mezzo e-mail, agli utenti
-        abilitati ai Servizi Fiscosport, direttamente o per tramite di un C.R. o C.P. CONI o di una Fsn/Dsa/Eps aderente
-        al progetto Fiscosport. Gli utenti non ancora registrati possono avvalersi dell'apposito link, sotto la maschera
-        "Accedi", in alto a destra del sito www.fiscosport.it (accessibile anche dal collegamento ipertestuale >> al
-        termine di ogni news).
-        <br/>
-
-        Lo sappiamo tutti, e da sempre lo andiamo dicendo anche noi di Fiscosport: gli adempimenti che le associazioni e
-        le società sportive sono chiamate ad osservare sono numerosi e non sempre di immediata comprensione e
-        attuazione. Per questo Riviste come la nostra non possono mancare su un computer o una scrivania di chi si
-        occupa da vicino di associazionismo sportivo. E' pur vero, tuttavia, che una cosa è la "grammatica", altro è la
-        "pratica"... e mai come oggi una gestione approssimativa comporta un rischio troppo alto per gli insostenibili
-        costi a cui eventuali errori possono esporre non solo l'ente ma soprattutto i loro rappresentanti! Il mondo
-        dello sport italiano vive, come è noto, grazie a un sistema in gran parte improntato sul volontariato o comunque
-        su modelli di organizzazione non imprenditoriali: è forse giusto pretendere da chi a quel mondo dedica tempo,
-        energie, spesso soldi, di assumersi enormi responsabilità senza che vengano offerti strumenti adeguati per
-        muoversi correttamente?
-
-        A nostro parere no. Ed è con questo spirito che è nata l'idea di una collaborazione tra Fiscosport e TeamArtist:
-        per fornire alle ASD un supporto autorevole per ogni dubbio legale/ fiscale/ contabile e, contemporaneamente,
-        uno strumento informatico sempre aggiornato e di altissimo livello per la gestione di tutte le piccole e grandi
-        incombenze quotidiane.
-
-        Per maggiori approfondimenti e per i dettagli dell'offerta esclusiva riservata ai nostri Lettori e Utenti
-        rinviamo alla lettura di questa news.
-
-        Auguriamo a tutti Voi un buon lavoro in questo ultimo scorcio d'anno, con la speranza che al nostro impegno per
-        sostenere e supportare a 360 gradi le associazioni e le società sportive che ci seguono corrisponda il Vostro
-        gradimento per la nuova iniziativa!
-
-
+                <%= image_tag("/images/commons/servizi-fiscosport.jpg", :alt => "Servizi alle associazioni") %>
+                </p>
+                <h3 class="fs-postheader">I NOSTRI SERVIZI ALLE ASSOCIAZIONI</h3>
+                <div class="layout-item-2-lite">
+                Fiscosport la migliore rivista  che tratta di argomenti fiscali in ambito sportivo.
+                Esiste solo in formato online ed è fruibile in toto tramite un abbonamento annule.
+                La sua Newsletter viene inviata all'abbonato con cadenza QUINDICINALE
+                e viene di norma inoltrata nella giornata del giovedì (1/11, 15/11, 29/11, 13/12), a mezzo e-mail, agli utenti
+                abilitati ai Servizi Fiscosport, direttamente o per tramite di un C.R. o C.P. CONI o di una Fsn/Dsa/Eps aderente
+                al progetto Fiscosport. Gli utenti non ancora registrati possono avvalersi dell'apposito link, sotto la maschera
+                "Accedi", in alto a destra del sito www.fiscosport.it.   <br />
+                <p> Lo sappiamo tutti, e da sempre lo andiamo dicendo anche noi di Fiscosport: gli adempimenti che le associazioni e
+                le società sportive sono chiamate ad osservare sono numerosi e non sempre di immediata comprensione e
+                attuazione. Per questo Riviste come la nostra non possono mancare su un computer o una scrivania di chi si
+                occupa da vicino di associazionismo sportivo. E' pur vero, tuttavia, che una cosa è la "grammatica", altro è la
+                "pratica"... e mai come oggi una gestione approssimativa comporta un rischio troppo alto per gli insostenibili
+                costi a cui eventuali errori possono esporre non solo l'ente ma soprattutto i loro rappresentanti! Il mondo
+                dello sport italiano vive, come è noto, grazie a un sistema in gran parte improntato sul volontariato o comunque
+                su modelli di organizzazione non imprenditoriali: è forse giusto pretendere da chi a quel mondo dedica tempo,
+                energie, spesso soldi, di assumersi enormi responsabilità senza che vengano offerti strumenti adeguati per
+                muoversi correttamente?
+                <br/>
+                A nostro parere no. Ed è con questo spirito che è nata l'idea di una collaborazione tra Fiscosport e TeamArtist:
+                per fornire alle ASD un supporto autorevole per ogni dubbio legale/ fiscale/ contabile e, contemporaneamente,
+                uno strumento informatico sempre aggiornato e di altissimo livello per la gestione di tutte le piccole e grandi
+                incombenze quotidiane.
+                  <br/>
+                Per maggiori approfondimenti e per i dettagli dell'offerta esclusiva riservata ai nostri Lettori e Utenti
+                rinviamo alla lettura di questa news.
+                  </p>
+                  <p>
+                Auguriamo a tutti Voi un buon lavoro in questo ultimo scorcio d'anno, con la speranza che al nostro impegno per
+                sostenere e supportare a 360 gradi le associazioni e le società sportive che ci seguono corrisponda il Vostro
+                gradimento per la nuova iniziativa!
+                    </p>
+                <br/>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <br/>
       </article>
+     <br/>
+      <%# if @quesiti_news_stato_num  > 1%>
 
+      <div class="clearfix"></div>
+
+
+        <br/>
+
+    <br/>
+    <p style="text-align: center;">
+      <%#link_to('Indietro', quesiti_my_path, :class => "fs-blu-button") %>  </p>
+    <%# end %>
     </div>
-  </div>
-  <%= render :partial => 'blocco_sidebar1' %>
 
 
-</div>
+<%= render :partial => 'blocco_sidebar1' %>
+
