--- a/app/views/editorial/profili.html.erb
+++ b/app/views/editorial/profili.html.erb
@@ -1,60 +1,130 @@
-<div class="fs-layout-cell fs-content clearfix" style="width: 100%; position:relative;">
-  <article class="fs-post fs-article"> <!--#contenitore -->
+<div class="fs-layout-cell fs-content clearfix">
+  <% if flash[:notice] %>
+      <div id="fs-flash-notice"><%= notice %> </div>
+  <% end %>
+  <div>
+    <%= link_to("1a versione statica", chisiamo_path, :class => "fs-giallo-button") %></div>
+  <div class="fs-content-layout post-layout-item-0" style="width: 99%">
     <div class="fs-content-layout-row">
       <div class="fs-layout-cell post-layout-item-3" style="width: 50%">
-        <article class="fs-post fs-article clearfix">
+        <article class="fs-post-profile fs-article">
           <h3 class="fs-postheader">DIRETTORI DI REDAZIONE </h3>
           <% @direttori.each do |item| %>
               <div class="fs-chisiamo-item">
                 <%= link_to image_tag("/images/commons/m1.png", :alt => item.firstname + ' ' + item.lastname, :height => "75", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_show" %>
-                <p><span style="font-weight: bold;">  <%= item.firstname + ' ' + item.lastname %></span><br/>
+                <p>
+                  <span style="font-weight: bold;">  <%= link_to((item.firstname + ' ' + item.lastname), :controller => "editorial", :action => "profilo_show") %></span><br/>
                   <span style="font-style: italic;">  <%= item.fs_qualifica %> </span></p>
               </div>
           <% end %>
         </article>
-        <br/>&nbsp; <br/>
       </div>
-      <div class="fs-layout-cell post-layout-item-3 clearfix" style="width: 50%">
-        <article class="fs-post fs-article clearfix">
+      <div class="fs-layout-cell post-layout-item-3" style="width: 50%">
+        <article class="fs-post-profile fs-article">
           <h3 class="fs-postheader">RESPONSABILI DI REDAZIONE </h3>
           <% @responsabili.each do |item| %>
               <div class="fs-chisiamo-item">
                 <%= link_to image_tag("/images/commons/m1.png", :alt => item.firstname + ' ' + item.lastname, :height => "75", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_show" %>
-                <p><span style="font-weight: bold;">  <%= item.firstname + ' ' + item.lastname %></span><br/>
+                <p>
+                  <span style="font-weight: bold;">  <%= link_to((item.firstname + ' ' + item.lastname), :controller => "editorial", :action => "profilo_show") %></span><br/>
                   <span style="font-style: italic;">  <%= item.fs_qualifica %> </span></p>
               </div>
           <% end %>
         </article>
-        <br/>&nbsp; <br/>
       </div>
     </div>
-    <div class="fs-layout-cell fs-content clearfix" style="width: 100%; position:relative;">
-      <div class="post-layout-item-3">
-        <article class="fs-post fs-article">
+  </div>
+  <div class="fs-content-layout post-layout-item-0" style="width: 99%">
+    <div class="fs-content-layout-row">
+      <div class="fs-layout-cell post-layout-item-3">
+        <article class="fs-post-profile fs-article">
           <h3 class="fs-postheader">COLLABORATORI DELLA REDAZIONE </h3>
-          <% @responsabili.each do |item| %>
-              <div class="fs-chisiamo-item">
-                <%= link_to image_tag("/images/commons/m1.png", :alt => item.firstname + ' ' + item.lastname, :height => "75", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_show" %>
-                <p><span style="font-weight: bold;">  <%= item.firstname + ' ' + item.lastname %></span><br/>
+          <% @collaboratori.each do |item| %>
+              <div class="fs-chisiamo-item2">
+                <%= link_to image_tag("/images/commons/m2.png", :alt => item.firstname + ' ' + item.lastname, :height => "80", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_show", :uid => item.id %>
+                <p>
+                  <span style="font-weight: bold;">  <%= link_to((item.firstname + ' ' + item.lastname), :controller => "editorial", :action => "profilo_show", :uid => item.id) %></span><br/>
                   <span style="font-style: italic;">  <%= item.fs_qualifica %> </span></p>
               </div>
           <% end %>
           <% @users.each do |item| %>
-              <div class="fs-chisiamo-item">
-                <%= link_to image_tag("/images/commons/m1.png", :alt => item.firstname + ' ' + item.lastname, :height => "75", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_show" %>
-                <p><span style="font-weight: bold;">  <%= item.firstname + ' ' + item.lastname %></span><br/>
-                  <span style="font-style: italic;"> collaboratore </span></p>
+              <div class="fs-chisiamo-item2">
+                <%= link_to image_tag("/images/commons/m1.png", :alt => item.firstname + ' ' + item.lastname, :height => "80", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_new", :uid => item.id %>
+                <p>
+                  <span style="font-weight: bold;">  <%= link_to((item.firstname + ' ' + item.lastname), :controller => "editorial", :action => "profilo_new", :uid => item.id) %></span><br/>
+                  <span style="font-style: italic;"> Collaboratore </span></p>
               </div>
           <% end %>
+          <div class="clearfix"></div>
         </article>
-        <br/>&nbsp; <br/>
+      </div>
+    </div>
+  </div>
+</div>
+<!--
+<div class="fs-layout-cell fs-content clearfix" style="width: 99%; position:relative;">
+  <article class="fs-post fs-article">
+    <div class="fs-postcontent clearfix">
+      <div class="fs-content-layout">
+        <div class="fs-content-layout-row">
+          <div class="fs-layout-cell post-layout-item-3" style="width: 50%">
+            <article class="fs-post fs-article clearfix">
+              <h3 class="fs-postheader">DIRETTORI DI REDAZIONE </h3>
+              <% @direttori.each do |item| %>
+                  <div class="fs-chisiamo-item">
+                    <%= link_to image_tag("/images/commons/m1.png", :alt => item.firstname + ' ' + item.lastname, :height => "75", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_show" %>
+                    <p><span style="font-weight: bold;">  <%= item.firstname + ' ' + item.lastname %></span><br/>
+                      <span style="font-style: italic;">  <%= item.fs_qualifica %> </span></p>
+                  </div>
+              <% end %>
+            </article>
+            <br/>&nbsp; <br/>
+          </div>
+          <div class="fs-layout-cell post-layout-item-3 clearfix" style="width: 50%">
+            <article class="fs-post fs-article clearfix">
+              <h3 class="fs-postheader">RESPONSABILI DI REDAZIONE </h3>
+              <% @responsabili.each do |item| %>
+                  <div class="fs-chisiamo-item">
+                    <%= link_to image_tag("/images/commons/m1.png", :alt => item.firstname + ' ' + item.lastname, :height => "75", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_show" %>
+                    <p><span style="font-weight: bold;">  <%= item.firstname + ' ' + item.lastname %></span><br/>
+                      <span style="font-style: italic;">  <%= item.fs_qualifica %> </span></p>
+                  </div>
+              <% end %>
+            </article>
+            <br/>&nbsp; <br/>
+          </div>
+        </div>
       </div>
     </div>
   </article>
-  <%= link_to("1a versione statica", chisiamo_path, :class => "fs-giallo-button") %>
+<div class="cleared"></div>
+  <div class="fs-layout-cell fs-content clearfix" style="width: 99%; position:relative; display:block;">
+    <article class="fs-post fs-article">
+      <div class="fs-postcontent clearfix">
+        <div class="fs-content-layout-row">
+          <div class="fs-layout-cell post-layout-item-3">
+            <article class="fs-post fs-article fs-art-profiles">
+              <h3 class="fs-postheader">DIRETTORI DI REDAZIONE </h3>
+              <% @direttori.each do |item| %>
+                  <div class="fs-chisiamo-item">
+                    <%= link_to image_tag("/images/commons/m1.png", :alt => item.firstname + ' ' + item.lastname, :height => "75", :class => "fs-lightbox"), :controller => "editorial", :action => "profilo_show" %>
+                    <p><span style="font-weight: bold;">  <%= item.firstname + ' ' + item.lastname %></span><br/>
+                      <span style="font-style: italic;">  <%= item.fs_qualifica %> </span></p>
+                  </div>
+              <% end %>
+            </article>
+            <br/>&nbsp; <br/>
+          </div>
+        </div>
+      </div>
+    </article>
+  </div>
+
 </div>
+-->
 
 <%# render :partial => 'blocco_sidebar1' %>
+
 
 <%= render :partial => 'blocco_sidebar1' %>
 
